linked to images instead of Images

--- a/index.css
+++ b/index.css
@@ -210,7 +210,7 @@ margin:0; padding:0; list-style:none;
    width: 168px;
    height: 231px;
    top: 62px;
-   background-image: url(Images/column5.png);
+   background-image: url(images/column5.png);
 }
 
 <!--
@@ -432,7 +432,7 @@ a:hover {
 	left: 5px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper1_left1.png);	
+	background-image: url(images/wrapper1_left1.png);	
    }
 
 .wrapper1 .left2{
@@ -441,7 +441,7 @@ a:hover {
 	left: 30px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper1_left2.png);
+	background-image: url(images/wrapper1_left2.png);
 }
 .wrapper1 .left3{
 	position: relative;
@@ -449,7 +449,7 @@ a:hover {
 	left: 50px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper1_left3.png);
+	background-image: url(images/wrapper1_left3.png);
 }
 .wrapper1 .left4{
 	position: relative;
@@ -457,7 +457,7 @@ a:hover {
 	left: 75px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper1_left4.png);
+	background-image: url(images/wrapper1_left4.png);
 }
 .wrapper1 .left5{
 	position: relative;
@@ -465,7 +465,7 @@ a:hover {
 	left: 100px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper1_left5.png);
+	background-image: url(images/wrapper1_left5.png);
 }
 
 .wrapper2 {
@@ -482,7 +482,7 @@ a:hover {
 	left: 5px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper2_left1.png);
+	background-image: url(images/wrapper2_left1.png);
    }
 .wrapper2 .left2{
    position: relative;
@@ -490,7 +490,7 @@ a:hover {
    left: 30px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper2_left2.png);
+   background-image: url(images/wrapper2_left2.png);
 
 }
 .wrapper2 .left3{
@@ -499,7 +499,7 @@ a:hover {
    left: 50px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper2_left3.png);
+   background-image: url(images/wrapper2_left3.png);
 
 }
 .wrapper2 .left4{
@@ -508,7 +508,7 @@ a:hover {
    left: 75px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper2_left4.png);
+   background-image: url(images/wrapper2_left4.png);
 
 }
 .wrapper2 .left5{
@@ -517,7 +517,7 @@ a:hover {
    left: 100px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper2_left5.png);
+   background-image: url(images/wrapper2_left5.png);
 
 }
 
@@ -535,7 +535,7 @@ a:hover {
 	left: 5px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper3_left1.png);
+	background-image: url(images/wrapper3_left1.png);
    }
 .wrapper3 .left2{
    position: relative;
@@ -543,7 +543,7 @@ a:hover {
    left: 30px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper3_left2.png);
+   background-image: url(images/wrapper3_left2.png);
 }
 .wrapper3 .left3{
    position: relative;
@@ -551,7 +551,7 @@ a:hover {
    left: 50px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper3_left3.png);
+   background-image: url(images/wrapper3_left3.png);
 }
 .wrapper3 .left4{
    position: relative;
@@ -559,7 +559,7 @@ a:hover {
    left: 75px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper3_left4.png);
+   background-image: url(images/wrapper3_left4.png);
 }
 .wrapper3 .left5{
    position: relative;
@@ -567,7 +567,7 @@ a:hover {
    left: 100px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper3_left5.png);
+   background-image: url(images/wrapper3_left5.png);
 }
 
 .wrapper4 {
@@ -583,7 +583,7 @@ a:hover {
 	left: 5px;
 	width: 166px;
 	height: 115px;
-	background-image: url(Images/wrapper4_left1.png);  
+	background-image: url(images/wrapper4_left1.png);  
    }
 .wrapper4 .left2{
    position: relative;
@@ -591,7 +591,7 @@ a:hover {
    left: 30px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper4_left2.png);
+   background-image: url(images/wrapper4_left2.png);
 }
 .wrapper4 .left3{
    position: relative;
@@ -599,7 +599,7 @@ a:hover {
    left: 50px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper4_left3.png);
+   background-image: url(images/wrapper4_left3.png);
 }
 .wrapper4 .left4{
    position: relative;
@@ -607,7 +607,7 @@ a:hover {
    left: 75px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper4_left4.png);
+   background-image: url(images/wrapper4_left4.png);
 }
 .wrapper4 .left5{
    position: relative;
@@ -615,7 +615,7 @@ a:hover {
    left: 100px;
    width: 166px;
    height: 115px;
-   background-image: url(Images/wrapper4_left5.png);
+   background-image: url(images/wrapper4_left5.png);
 }
 
  
